--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -19,7 +19,7 @@
             <li class="layui-nav-item" th:if="${session.user==null}"><a href="/register">注册</a></li>
             <!--登录后的状态-->
             <li class="layui-nav-item tree-hide-sm" style="margin-right: 20px" th:if="${session.user!=null}">
-                <a href="/profile/replies" th:if="${session.unreadCount>0}">有新消息
+                <a href="/user/profile/message" th:if="${session.unreadCount>0}">有新消息
                     <span class="layui-badge" th:text="${session.unreadCount}"></span>
                 </a>
             </li>
@@ -29,12 +29,12 @@
                     <img th:src="${session.user.avatarUrl}">
                 </a>
                 <dl class="layui-nav-child tree-anim">
-                    <dd style="top: 4px;"><a href="/profile/replies">
+                    <dd style="top: 4px;"><a href="/user/profile/message">
                         <i class="layui-icon layui-icon-notice"></i>我的消息<span class="layui-badge-dot" th:if="${session.unreadCount>0}"></span></a>
                     </dd>
-                    <dd><a href="/user/123"><i class="layui-icon layui-icon-home"></i>我的主页</a></dd>
+                    <dd><a th:href="${'/user/'+session.user.id}"><i class="layui-icon layui-icon-home"></i>我的主页</a></dd>
                     <hr style="margin: 5px 0;">
-                    <dd><a href="/profile/questions"><i class="layui-icon layui-icon-tabs"></i>帖子管理</a></dd>
+                    <dd><a href="/user/profile/questions"><i class="layui-icon layui-icon-tabs"></i>帖子管理</a></dd>
                     <dd><a href="/user/set/account"><i class="layui-icon layui-icon-friends"></i>账户中心</a></dd>
                     <dd><a href="/user/set/info"><i class="layui-icon layui-icon-set-sm"></i>基本设置</a></dd>
                     <hr style="margin: 5px 0;">
